<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@drawable/bottom_bg"
    android:backgroundTint="@color/white"
    android:padding="@dimen/_10sdp"
    android:layout_height="wrap_content">

    <View
        android:layout_width="@dimen/_50sdp"
        android:layout_height="@dimen/_2sdp"
        android:layout_gravity="center"
        android:layout_margin="@dimen/_10sdp"
        android:background="@color/black"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
       >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/statistiklerim"
            android:layout_gravity="center"
            android:textColor="@color/black"
            android:fontFamily="@font/montserrat"
            android:id="@+id/stats"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_ru_cevaplar"
            android:layout_below="@id/stats"
            android:id="@+id/correctAnswers"
            android:textColor="@color/green_800"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="@dimen/_5sdp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yanl_cevaplar"
            android:id="@+id/wrongAnswers"
            android:textColor="@color/error"
            android:layout_below="@id/correctAnswers"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="@dimen/_5sdp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="%0"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/stats"

            android:id="@+id/percentage"
            android:textColor="@color/itemOrange"
            android:fontFamily="@font/montserrat"
            android:layout_marginTop="@dimen/_5sdp"/>



    </RelativeLayout>






</LinearLayout>