<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".activities.MainActivity">




    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        android:src="@drawable/prizma_logos_black"
        android:id="@+id/logo"
        android:layout_gravity="center"
       />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:id="@+id/loginInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_150sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="@dimen/_5sdp">


                <TextView
                    android:id="@+id/showLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_5sdp"
                    android:background="@drawable/rect_border"
                    android:fontFamily="@font/montserrat"
                    android:foreground="?selectableItemBackground"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/giri_yap"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


                <TextView
                    android:id="@+id/showRegister"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:background="@drawable/rect_border"
                    android:backgroundTint="@color/black"
                    android:fontFamily="@font/montserrat"
                    android:foreground="?selectableItemBackground"
                    android:padding="@dimen/_7sdp"
                    android:text="@string/kaydol"

                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold" />


            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardBackgroundColor="@color/primary_dark"
                android:layout_margin="@dimen/_10sdp"
                app:cardCornerRadius="@dimen/_8sdp">



                <LinearLayout
                    android:id="@+id/loginLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/loginInfoLayout"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp">


                    <EditText
                        android:id="@+id/emailLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/email"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawableTint="@color/white"
                        android:drawablePadding="@dimen/_3sdp"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />


                    <EditText
                        android:id="@+id/passwordLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/rect_border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:drawableStart="@drawable/ic_baseline_password_24"
                        android:drawableTint="@color/white"
                        android:drawablePadding="@dimen/_3sdp"
                        android:hint="@string/ifre"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />


                    <Button
                        android:id="@+id/btnLogin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/rect_button"
                        android:fontFamily="@font/montserrat"
                        android:text="Giriş"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="20sp" />


                    <TextView
                        android:id="@+id/forgotPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="?android:selectableItemBackground"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/ifremi_unuttum"
                        android:textColor="@color/white"
                        android:textStyle="bold" />


                </LinearLayout>


                <LinearLayout
                    android:id="@+id/registerLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_8sdp"
                    android:orientation="vertical"
                    android:padding="@dimen/_4sdp"
                    android:visibility="gone"
                    >


                    <EditText
                        android:id="@+id/emailRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rect_border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/email"
                        android:drawableStart="@drawable/ic_baseline_email_24"
                        android:drawableTint="@color/white"
                        android:drawablePadding="@dimen/_3sdp"
                        android:inputType="textEmailAddress"
                        android:maxLength="45"
                        android:maxLines="1"

                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />


                    <EditText
                        android:id="@+id/passwordRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/rect_border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/ifre"
                        android:inputType="textPassword"
                        android:maxLength="25"
                        android:drawableStart="@drawable/ic_baseline_password_24"
                        android:drawableTint="@color/white"
                        android:drawablePadding="@dimen/_3sdp"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />


                    <EditText
                        android:id="@+id/usernameRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="@drawable/rect_border"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/montserrat"
                        android:hint="@string/kullan_c_ad"
                        android:maxLength="15"
                        android:maxLines="1"
                        android:padding="@dimen/_10sdp"
                        android:drawableStart="@drawable/ic_person_black_24dp"
                        android:drawableTint="@color/white"
                        android:drawablePadding="@dimen/_3sdp"
                        android:textColor="@color/white"
                        android:textColorHint="@color/white"
                        android:textSize="15sp" />


                    <Button
                        android:id="@+id/btnRegister"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_margin="@dimen/_10sdp"
                        android:background="@drawable/rect_button"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/kaydol"
                        android:textAllCaps="false"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/privacy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="@dimen/_15sdp"
                        android:background="?android:selectableItemBackground"
                        android:fontFamily="@font/montserrat"
                        android:text="@string/gizlilik_s_zle_mesi"
                        android:textColor="@color/white"
                        android:textStyle="bold" />



                </LinearLayout>

            </androidx.cardview.widget.CardView>





        </LinearLayout>


    </androidx.core.widget.NestedScrollView>







</RelativeLayout>